--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/router": "^5.2.0",
     "angular-in-memory-web-api": "^0.6.0",
     "core-js": "^2.4.1",
+    "ng4-loading-spinner": "^1.1.3",
+    "ngx-pagination": "^3.1.1",
+    "ngx-spinner": "^6.0.0",
     "rxjs": "^5.5.11",
     "zone.js": "^0.8.19"
   },
